<resources>
    <string name="app_name">Juego de Frutas</string>
    <string name="personaje">Personaje</string>
    <string name="et_nombre">Cómo te llamas?</string>
    <string name="btn_text">JUGAR</string>
    <string name="swt_hard">MODO DIFÍCIL</string>

    //Nivel 1

    <string name="et_vidas">Manzanas</string>
    <string name="jugadorNombre">Jugador: </string>
    <string name="totalScore">Score: 0</string>
    <string name="botonSumar">Comprobar</string>
    <string name="Respuesta">Respuesta</string>

    //MiniJuego
    <string name="boton_init_play">Mini Juego</string>
    <string name="boton_init_quit">Salir</string>
    <string name="boton_juego_reinit">Reiniciar</string>
    <string name="boton_juego_quit">Salir</string>

</resources>