<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondojuego"
    tools:context=".MainActivity2_Nivel4">

    <TextView
        android:id="@+id/tv_manzanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/et_vidas"
        android:fontFamily="@font/turtles"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score" />

    <Button
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/fondoet"
        android:onClick="comparar"
        android:text="@string/botonSumar"
        android:textColor="@color/teal_700"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_respuesta"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="464dp"
        android:ems="10"
        android:fontFamily="@font/turtles"
        android:hint="@string/Respuesta"
        android:textSize="25dp"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_numero2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/iv_numero1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="284dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/iv_symbol_1"
        android:layout_width="93dp"
        android:layout_height="102dp"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/restarp" />

    <ImageView
        android:id="@+id/iv_manzana"
        android:layout_width="84dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="224dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tresvidas" />

    <TextView
        android:id="@+id/tv_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/jugadorNombre"
        android:fontFamily="@font/turtles"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/totalScore"
        android:fontFamily="@font/turtles"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Nombre" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar1"
        android:layout_width="409dp"
        android:layout_height="55dp"
        android:background="@drawable/fondoet"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>